Styling edits on navbar

--- a/style-home.css
+++ b/style-home.css
@@ -17,6 +17,11 @@ background: radial-gradient(circle, rgba(49,44,60,1) 0%, rgba(27,21,41,1) 57%);
 }
 .nav-link {
     color: #ffffff;
+    font-weight: 500;
+}
+
+.nav-link:hover {
+    color: #bb8b41;
 }
 .navbar-brand {
     color: #ffffff;
@@ -74,6 +79,12 @@ background: radial-gradient(circle, rgba(49,44,60,1) 0%, rgba(27,21,41,1) 57%);
 }
 
 .btn-primary{
+    background-color: #bb8b41;
+    border-color: #bb8b41;
+    
+}
+
+.btn-primary:hover{
     background-color: #bb8b41;
     border-color: #bb8b41;
     
