--- a/style-home.css
+++ b/style-home.css
@@ -69,6 +69,7 @@ background: radial-gradient(circle, rgba(49,44,60,1) 0%, rgba(27,21,41,1) 57%);
 .list-group-item a {
     text-decoration: none;
     color: #ffffff;
+    font-weight: 500;
     opacity: 0.75;
 }
 .list-group-item a:hover {
