--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
+.header .navbar {
+    background-color: #1b1529 !important;
+}
+
+.header .nav-link {
+  font-size: 14px;
+  font-weight: 600;
+}
+.nav-link {
+    color: #ffffff;
+    font-weight: 500;
+}
+
+.nav-link:hover {
+    color: #bb8b41;
+}
+.nav-link:focus {
+    color: #cccccc;
+}
+.navbar-brand {
+    color: #ffffff;
+}
+
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    color: #cccccc;
+}
 .margin-bottom-1em{ margin-bottom:1em; }
 .width-30-percent{ width:30%; }
 .margin-1em-zero{ margin:1em 0; }
